--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!-- Loader -->
-    <div id="loader">
+   <!-- Loader -->
+<div id="loader">
+    <video id="loader-video" src="https://content-management-files.canva.com/16480a7c-bffe-49f0-a1c9-b8848f45284c/fade_to_door.mp4" muted autoplay></video>
+    <div id="loader-img" style="display:none;">
         <img src="logo.png" alt="Logo Empresa">
     </div>
+</div>
+<div id="content" style="display: none;">
+    <!-- Aquí va el contenido principal de la página -->
+</div>
 
     <!-- Contenido de la página -->
     <div id="content">
@@ -99,7 +105,7 @@
                 </div>
         
                 <div class="photo-founder">
-                    <div class="image" style="background-image:url('https://via.placeholder.com/300x200?text=Photo+2');"></div>
+                    <div class="image" style="background-image:url(Richie.jpg);"></div>
                     <p class="founder-name">Ricardo Ruiz Cano</p>
                 </div>
         
